# Real-time-trading-engine

./: .gitignore  ALGORITHMIC_TRADING_README.md  CLI.cpp  CLI.h  CMakeLists.txt  EmailNotifier.cpp  EmailNotifier.h  FindPython.cmake  Logger.cpp  Logger.h  MatchingEngine.cpp  MatchingEngine.h  Order.cpp  Order.h  OrderBook.cpp  OrderBook.h  PROJECT_COMPLETE_OVERVIEW.md  PROJECT_DETAILS.md  QUICK_REFERENCE.md  README.md  Trade.cpp  Trade.h  TradeLogger.cpp  TradeLogger.h  binding.cpp  build_and_run.py  cpp_engine_server.cpp  docker-compose.production.yml  main.cpp  matching_engine_bindings.cpp  simple_build.py  vittcott_log.txt
backend/: Dockerfile.production  advanced_trading_api.py  config.py  cpp_bindings.py  init_db.py  main.py  minimal_server.py  requirements.production.txt  requirements.txt  simple_http_server.py  simple_main.py  start_backend.py  test_algo_chatbot.py  test_api.py  test_cpp_integration.py  test_server.py  test_simple.py  test_simple_server.py  vittcott_log.txt  working_server.py  working_stock_api.py
backend/config/: production.py
backend/database/: main.py
backend/mock_trading_engine/: __init__.py
backend/models/: database.py  order.py  schemas.py
backend/routes/: algo_trading_routes.py  auth_routes.py  chatbot_routes.py  market_data_routes.py  trading_routes.py
deploy/: PRODUCTION_DEPLOYMENT_GUIDE.md  production_deploy.sh
frontend/: Dockerfile.production  index.html  package-lock.json  package.json  serve.py  simple_index.html  vite.config.js
frontend/src/: App.css  (+2 more)
src/: MatchingEngine.hpp  Order.hpp  OrderBook.hpp  main.cpp
(+46 files in other folders)
